1. adjust css of daily digest newsletter 2. adjust title of daily digest newsletter

--- a/config/newsletter.html
+++ b/config/newsletter.html
@@ -104,17 +104,17 @@
       display: flex;
       border: solid 1px #979797;
       margin: 11px 0 0 0;
-      padding: 0 0 0 27.5px;
+      min-height: 77px;
     }
     .source-figure__link-title {
       font-size: 18px;
       font-weight: 600;
       text-align: justify;
       color: #979797;
-      margin: auto 0;
+      margin: auto 27.5px;
     }
     .source-figure__link-image {
-      width: 132px;
+      min-width: 132px;
       height: 75px;
       object-fit: cover;
     }
