1. make receiver bcc to prevent snooping other member's email

--- a/config/newsletter.html
+++ b/config/newsletter.html
@@ -104,6 +104,7 @@
       display: flex;
       border: solid 1px #979797;
       margin: 11px 0 0 0;
+      width: 100%;
       max-height: 77px;
       height: 77px;
       overflow: hidden;
@@ -114,9 +115,13 @@
       text-align: justify;
       color: #979797;
       margin: auto 27.5px;
+      width: 75%;
+      max-width: 75%;
     }
     .source-figure__link-image {
-      min-width: 132px;
+      /* min-width: 132px; */
+      min-width: 25%;
+      width: 25%;
       height: 75px;
       object-fit: cover;
     }
@@ -124,6 +129,13 @@
       .source-figure__link-title {
         font-size: 14px;
         margin: auto 13px;
+        width: 50%;
+        max-width: 50%;
+      }
+      .source-figure__link-image {
+        /* min-width: 132px; */
+        min-width: 50%;
+        width: 50%;
       }
     }
   </style>
