1. Notification mail for follwing a project 2. Adjust setting link for members in mail templates

--- a/config/newsletter.html
+++ b/config/newsletter.html
@@ -330,7 +330,7 @@
     </section>
     {{end}}
     <footer class='newsletter-footer'>
-      <a href="{{.SubLink}}" class="newsletter-footer__unsubscribe">取消訂閱 Unsubscribe</a>
+      <a href="{{.SettingLink}}/profile-edit" class="newsletter-footer__unsubscribe">取消訂閱 Unsubscribe</a>
     </footer>
   </div>
 </body>
