--- a/config/toggleFollow.html
+++ b/config/toggleFollow.html
@@ -154,7 +154,7 @@
             <p>
               如果你不想收到專題最新消息通知信，<br>你可以按這裡 
               <!-- 取消訂閱： ​​link to 個人通知取消訂閱（new feature in readr-site）, 取消追蹤專題： navigate to unfollow -->
-              <a href="{{index . "UnsubLink"}}" target="_blank" class="unfollow">取消訂閱</a>，<a href="https://www.readr.tw/series/{{index . "ProjectSlug"}}" target="_blank" class="unfollow">取消追蹤專題</a>
+              <a href="{{index . "SettingLink"}}/profile-edit" target="_blank" class="unfollow">取消訂閱</a>，<a href="{{index . "SettingLink"}}/following" target="_blank" class="unfollow">取消追蹤專題</a>
             </p>
           </div>
         </footer>
