--- a/config/newMemoUnPaid.html
+++ b/config/newMemoUnPaid.html
@@ -232,7 +232,7 @@
             <p>
               如果你不想收到專題最新消息通知信，<br>你可以按這裡 
               <!-- 取消訂閱： ​​link to 個人通知取消訂閱（new feature in readr-site）, 取消追蹤專題： navigate to unfollow -->
-              <a href="{{.UnsubLink}}" target="_blank" class="unfollow">取消訂閱</a>，<a href="{https://www.readr.tw/series/{{.ProjectSlug}}" target="_blank" class="unfollow">取消追蹤專題</a>
+              <a href="{{.SettingLink}}/profile-edit" target="_blank" class="unfollow">取消訂閱</a>，<a href="{{.SettingLink}}/following" target="_blank" class="unfollow">取消追蹤專題</a>
             </p>
           </div>
         </footer>
