Following API features 1. Add "followed_at" field for every resources in the result 2. Add "tags" field for each project in the result

--- a/config/newsletter.html
+++ b/config/newsletter.html
@@ -228,7 +228,7 @@
     {{if .HasReport}}
     <section class='newsletter-content__section reports'>
       <header class='section-header'>
-        <h1 class='section-header__title'>報導</h1>
+        <h1 class='section-header__title'>新聞專題</h1>
       </header>
       {{range .Reports}}
       <article class="reports-article">
@@ -246,7 +246,7 @@
     {{if .HasMemo}}
     <section class='newsletter-content__section memos'>
       <header class='section-header'>
-        <h1 class='section-header__title'>採訪筆記</h1>
+        <h1 class='section-header__title'>記者筆記</h1>
       </header>
       {{range .Memos}}
       <div class='article-content--categorize-author'>
@@ -273,7 +273,7 @@
     {{if .HasPost}}
     <section class='newsletter-content__section latests'>
       <header class='section-header'>
-        <h1 class='section-header__title'>視角</h1>
+        <h1 class='section-header__title'>客座評論</h1>
       </header>
       {{range .Posts}}
       <div class='article-content--categorize-author'>
